--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,43 +1,43 @@
-<%= form_with(model: book, local: true, html: { enctype: 'multipart/form-data' }) do |form| %>
-  <% if book.errors.any? %>
-    <div class="alert alert--negative flex flex-col gap-half mbe-4" role="alert">
-      <h2 class="font-medium leading-none"><%= pluralize(book.errors.count, "error") %> prohibited this book from being saved:</h2>
-      <ul class="text-sm mis-3" style="list-style: disc">
-        <% book.errors.each do |error| %>
-          <li><%= error.full_message %></li>
+<% content_for :title, "Editing book" %>
+
+<h1 class="font-bold text-4xl mbe-4">Editing book</h1>
+
+<%= render "form", book: @book %>
+
+<div class="inline-flex flex-wrap items-center gap mbs-2" style="--row-gap: .5rem">
+  <%= link_to "Show this book", @book, class: "btn" %>
+  <%= link_to "Back to books", books_path, class: "btn" %>
+  <%= link_to "Edit", edit_book_path(@book), class: "btn" %>
+</div>
+
+<%= form_with(model: @book, local: true) do |form| %>
+  <% if @book.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@book.errors.count, "error") %> prohibited this book from being saved:</h2>
+      <ul>
+        <% @book.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
         <% end %>
       </ul>
     </div>
   <% end %>
 
-  <div class="flex flex-col items-start gap-half mbe-4">
-    <%= form.label :title, class: "text-sm font-medium leading-none" %>
-    <%= form.text_field :title, class: "input" %>
+  <div class="field">
+    <%= form.label :title %>
+    <%= form.text_field :title %>
   </div>
 
-  <div class="flex flex-col items-start gap-half mbe-4">
-    <%= form.label :description, class: "text-sm font-medium leading-none" %>
-    <%= form.text_area :description, class: "input" %>
+  <div class="field">
+    <%= form.label :description %>
+    <%= form.text_area :description %>
   </div>
 
-  <div class="flex flex-col items-start gap-half mbe-4">
-    <%= form.label :year_published, "Year Published", class: "text-sm font-medium leading-none" %>
-    <%= form.number_field :year_published, class: "input" %>
+  <div class="field">
+    <%= form.label :publication_year %> <!-- Updated from release_date -->
+    <%= form.date_select :publication_year %>
   </div>
 
-  <div class="flex flex-col items-start gap-half mbe-4">
-    <%= form.label :author, class: "text-sm font-medium leading-none" %>
-    <%= form.text_field :author, class: "input" %>
-  </div>
-
-  <!-- Image upload field -->
-  <div class="flex flex-col items-start gap-half mbe-4">
-    <%= form.label :image, class: "text-sm font-medium leading-none" %>
-    <%= form.file_field :image, class: "input" %>
-  </div>
-
-  <div class="inline-flex items-center mbs-2 mie-1">
-    <%= form.submit "Save Book", class: "btn btn--primary" %>
+  <div class="actions">
+    <%= form.submit "Confirm" %>
   </div>
 <% end %>
-
