--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -24,8 +24,8 @@
 
   <!-- Year Published -->
   <div class="flex flex-col items-start gap-half mbe-4">
-    <%= form.label :publication_year, class: "text-sm font-medium leading-none" %>
-    <%= form.number_field :publication_year, class: "input" %>
+    <%= form.label :year, class: "text-sm font-medium leading-none" %>
+    <%= form.number_field :year, class: "input" %>
   </div>
 
   <!-- Rating -->
@@ -42,14 +42,18 @@
 
   <!-- Description -->
   <div class="flex flex-col items-start gap-half mbe-4">
-    <%= form.label :description, class: "text-sm font-medium leading-none" %>
-    <%= form.text_area :description, class: "input" %>
+    <%= form.label :summary, class: "text-sm font-medium leading-none" %>
+    <%= form.text_area :summary, class: "input" %>
   </div>
 
-  <!-- ✅ New Cover Upload Field -->
   <div class="flex flex-col items-start gap-half mbe-4">
-    <%= form.label :cover_image, "Upload Cover", class: "text-sm font-medium leading-none" %>
-    <%= form.file_field :cover_image, class: "input" %>
+  <%= form.label :franchise, class: "text-sm font-medium leading-none" %>
+  <%= form.text_area :franchise, class: "input" %>
+</div>
+
+  <div class="flex flex-col items-start gap-half mbe-4">
+    <%= form.label :poster, "Upload Cover", class: "text-sm font-medium leading-none" %>
+    <%= form.file_field :poster, class: "input" %>
   </div>
 
   <div class="inline-flex items-center mbs-2 mie-1">
