--- a/app/views/musics/_form.html.erb
+++ b/app/views/musics/_form.html.erb
@@ -37,9 +37,9 @@
   </div>
 
   <div class="flex flex-col items-start gap-half mbe-4">
-    <%= form.label :genre, class: "text-sm font-medium leading-none" %>
-    <%= form.text_field :genre, class: "input" %>
-  </div>
+  <%= form.label :rating, class: "text-sm font-medium leading-none" %>
+  <%= form.number_field :rating, class: "input" %>
+</div>
 
   <!-- Description -->
   <div class="flex flex-col items-start gap-half mbe-4">
